# MentorPi

./: .gitignore  CLAUDE.md  LICENSE  README.md  base_link
assets/calibration/config/: imu_calib.yaml
docs/: calibration.md  hardware_protocol.md
install/mentorpi_bringup/share/mentorpi_bringup/config/: slam_toolbox_params.yaml
install/mentorpi_msgs/include/mentorpi_msgs/mentorpi_msgs/msg/detail/: gimbal__description.c  gimbal__functions.c  gimbal__type_support.c  gimbal__type_support.cpp  motor_status__description.c  motor_status__functions.c  motor_status__type_support.c  motor_status__type_support.cpp
scripts/: capture_images.py  odom_calib.py  view_rtabmap_rerun.py  view_scan.py
src/mentorpi_base/: package.xml  setup.cfg  setup.py
src/mentorpi_base/mentorpi_base/: base_node.py
src/mentorpi_bringup/: package.xml  setup.cfg  setup.py
src/mentorpi_bringup/config/: ekf.yaml  imu_filter.yaml  slam_toolbox_localization_params.yaml
src/mentorpi_bringup/launch/: localization.launch.py  mapping.launch.py  mentorpi.launch.py  rtabmap_mapping.launch.py
src/mentorpi_description/: package.xml  setup.py
src/mentorpi_description/launch/: display.launch.py
src/mentorpi_description/urdf/: mecanum.xacro  mentorpi.xacro
src/mentorpi_msgs/: CMakeLists.txt  package.xml
src/mentorpi_msgs/msg/: MotorStatus.msg
src/mentorpi_teleop/: package.xml  setup.cfg  setup.py
src/mentorpi_teleop/mentorpi_teleop/: teleop_node.py
src/mentorpi_vision/: package.xml  setup.py
src/oradar_lidar/src/: oradar_scan_node.cpp
